style(project): apply formatting to shawn's latest changes
yay